 - gui: renamed can_non_space_wrap to is_non_space_wrap_enabled
 - gui: renamed set_non_space_wrap to set_word_wrap_enabled
 - gui: renamed nonspacewrap to nonSpaceWrap
 - gui: renamed enable_mouse* to set_mouse*_enabled
 - gui: renamed enable_key* to set_key*_enabled
 - gui: renamed is_password to is_password_mode_enabled
 - gui: renamed set_password to set_password_mode_enabled
 - gui: removed Frame:on from Lua API (instead, call scripts directly, e.g.: frame:on_update())
 - gui: removed the sprite class
 - gui: removed region::get_base()
 - gui: removed region::push_on_lua()
 - gui: removed region::get_id() and set_id()
 - gui: removed anchor::set_object() (now a reference, cannot change)
 - gui: removed font_string::get_shadow_x_offset()
 - gui: removed font_string::get_shadow_y_offset()
 - gui: removed region::set_abs_point and region::set_rel_point, use set_point() instead
 - gui: removed anchor::get_abs_x/get_abs_y and added anchor::get_point
 - gui: removed region::get_abs_width/height and added region::get_dimensions()
 - gui: removed region::get_apparent_width/height and added region::get_apparent_dimensions()
 - gui: removed region::set_newly_created/is_newly_created (no longer necessary)
 - gui: removed manager::is_loading_ui() (no longer necessary)
 - gui: removed manager::begin() and end()
 - gui: removed frame::is_mouse_enabled; use is_mouse_click_enabled and is_mouse_move_enabled
 - gui: removed frame::is_in_frame; use is_in_region instead
 - gui: removed frame::register_all_events and unregister_all_events
 - gui: removed event class; generic events are now only using event_data
 - gui: removed get_frame_type, use get_region_type instead
 - gui: edit_box::set_text_insets now takes a single bounds2f argument
 - gui: frame::on_script now takes the full script name ("OnUpdate" vs "Update")
 - gui: frame::on_script now takes a 'const event_data&' instead of an 'event*' argument
 - gui: font_string::set_offset now takes a single vector2f argument